package Proyectos.ExamOrdinary;

public interface AccionPolitica {

    boolean evaluarRiesgo();
    void tramitar();
    void censurar();

}
