package Proyectos.ExamOrdinary;

public enum EstadoMensaje {
    DIFUNDIDO, PENDIENTE, BLOQUEADO
}
